MDEV-6729: InnoDB: Failing assertion: state == TRX_STATE_NOT_STARTED in file trx0trx.ic line 60

Problem was that trx might have not been started when we enter release
savepoint, this can happen when trx with savepoint is already aborted 
or when we try to release non-existing savepoint.